# rme-generator

PyOTBM/: Tibia74-houses.xml  Tibia74-spawns.xml  const.py  custom_encoder.py  generate_map.py  get_config_map.py  main.py  main2.py  main3.py  read_items_otb.py  test.otbm
PyOTBM/lib/: bytes.py  otbm_house_tile.py  otbm_item.py  otbm_map_data.py  otbm_node.py  otbm_node_with_position.py  otbm_reader.py  otbm_root_node.py  otbm_tile.py  otbm_tile_area.py  otbm_town.py  otbm_towns.py  otbm_waypoint.py  otbm_waypoints.py  otbm_writer.py
RME-Gen/: CMakeLists.txt  README.md  client_version.cpp  client_version.h  common.h  graphics.h  iomap.h  iomap_otbm.h  items.h  main.cpp  main.h  positionctrl.h  settings.h
